tentative correction iPhone 4

--- a/sass/utiles/_animations.scss
+++ b/sass/utiles/_animations.scss
@@ -41,16 +41,24 @@
 // Menu déroulant 
 
 .menu-secondaire{
-    animation:         menu 500ms both;
-    -webkit-animation: menu 500ms both;
-    -moz-animation:    menu 500ms both;
-    // @for $i from 1 through 4 {
-    //     &--#{$i} {
-    //         animation-delay:         100ms * $i;
-    //         -webkit-animation-delay: 100ms * $i;
-    //         -moz-animation-delay:    100ms * $i;
-    //     }
-    // }
+    animation-name:         menu;
+    -webkit-animation-name: menu;
+    -moz-animation-name:    menu;
+
+    animation-duration:         500ms;
+    -webkit-animation-duration: 500ms;
+    -moz-animation-duration:    500ms;
+    
+    animation-fill-mode:         both;
+    -webkit-animation-fill-mode: both;
+    -moz-animation-fill-mode:    both;
+    @for $i from 1 through 4 {
+        &--#{$i} {
+            animation-delay:         100ms * $i;
+            -webkit-animation-delay: 100ms * $i;
+            -moz-animation-delay:    100ms * $i;
+        }
+    }
 }
 
 @keyframes menu {
